tests/dap_test/syntax/mutable_test.dap
package main;

fun main() int {

    imt int a = 10;
    a = 20; // error

    var int b = 20;
    b = 30;
    return 0;
}